Applied Redis caching to all read-heavy GET requests with appropriate @Cacheable, @CacheEvict, and @CachePut annotations for performance optimization